add tests and logback